bpo-38030: Fix os.stat failures on block devices on Windows (GH-15681)